tests/src/frontend/typechecking/invalid/await_outside_async2.sk
fun foo<T1, T: ^T1>(): T -> T1 {
  x ->
    await x // error, await in non-async lambda
}
